package engine.model;

/**
 * Interfaccia che rappresenta un oggetto identificabile.
 */
public interface Identifiable {
    /**
     * Restituisce l'id dell'oggetto.
     * @return id
     */
    String getId();
}
