package game.model.oggetti;

import engine.model.BaseOggetto;

public class Oggetto extends BaseOggetto {
    public Oggetto(String id, String nome, String descrizione, String filename) {
        super(id, nome, descrizione, filename);
    }

    @Override
    public void usa() {
        // TODO Auto-generated method stub
        
    }
}
